// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend.Resource.Form.KindAttributes component when kind is audio renders correctly 1`] = `
<div
  className="form-input"
>
  <div
    className="form-input"
    style={Object {}}
  >
    <label
      className=""
    >
      Image File
    </label>
    <div
      className="form-dropzone style-square"
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      style={Object {}}
    >
      <div
        className="contents-empty"
      >
        <i
          className="manicon manicon-cloud-up"
        />
        <div
          className="message"
        >
          <p
            className="primary"
          >
            Upload a file or
            <br />
            drag and drop here
            <br />
          </p>
          <p
            className="secondary"
          >
            jpeg, tiff, gif, png
          </p>
        </div>
      </div>
      <input
        accept="image/*"
        multiple={false}
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.KindAttributes component when kind is document renders correctly 1`] = `
<div
  className="form-input"
>
  <div
    className="form-input"
    style={Object {}}
  >
    <label
      className=""
    >
      Document File
    </label>
    <div
      className="form-dropzone style-square"
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      style={Object {}}
    >
      <div
        className="contents-empty"
      >
        <i
          className="manicon manicon-cloud-up"
        />
        <div
          className="message"
        >
          <p
            className="primary"
          >
            Upload a file or
            <br />
            drag and drop here
            <br />
          </p>
          <p
            className="secondary"
          >
            doc docx txt
          </p>
        </div>
      </div>
      <input
        accept="application/vnd.openxmlformats-officedocument.wordprocessingml.document,application/msword,text/*"
        multiple={false}
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.KindAttributes component when kind is file renders correctly 1`] = `
<div
  className="form-input"
>
  <div
    className="form-input"
    style={Object {}}
  >
    <label
      className=""
    >
      File
    </label>
    <div
      className="form-dropzone style-square"
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      style={Object {}}
    >
      <div
        className="contents-empty"
      >
        <i
          className="manicon manicon-cloud-up"
        />
        <div
          className="message"
        >
          <p
            className="primary"
          >
            Upload a file or
            <br />
            drag and drop here
            <br />
          </p>
        </div>
      </div>
      <input
        accept={undefined}
        multiple={false}
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.KindAttributes component when kind is interactive renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <label>
      Is this an iFrame?
    </label>
    <div
      className="toggle-indicator"
    >
      <div
        className="boolean-primary"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="form-section"
  >
    <div
      className="form-input"
    >
      <div
        className="form-input"
        style={Object {}}
      >
        <label>
          Embed Code
        </label>
        <textarea
          onChange={[Function]}
          placeholder="Enter HTML embed code"
          style={
            Object {
              "height": 100,
            }
          }
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.KindAttributes component when kind is link renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
    style={Object {}}
  >
    <label
      className=""
    >
      Link URL
    </label>
    <input
      onChange={[Function]}
      placeholder="Enter link URL"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Backend.Resource.Form.KindAttributes component when kind is pdf renders correctly 1`] = `
<div
  className="form-input"
>
  <div
    className="form-input"
    style={Object {}}
  >
    <label
      className=""
    >
      PDF File
    </label>
    <div
      className="form-dropzone style-square"
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      style={Object {}}
    >
      <div
        className="contents-empty"
      >
        <i
          className="manicon manicon-cloud-up"
        />
        <div
          className="message"
        >
          <p
            className="primary"
          >
            Upload a file or
            <br />
            drag and drop here
            <br />
          </p>
          <p
            className="secondary"
          >
            pdf
          </p>
        </div>
      </div>
      <input
        accept="application/pdf"
        multiple={false}
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.KindAttributes component when kind is presentation renders correctly 1`] = `
<div
  className="form-input"
>
  <div
    className="form-input"
    style={Object {}}
  >
    <label
      className=""
    >
      Presentation File
    </label>
    <div
      className="form-dropzone style-square"
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      style={Object {}}
    >
      <div
        className="contents-empty"
      >
        <i
          className="manicon manicon-cloud-up"
        />
        <div
          className="message"
        >
          <p
            className="primary"
          >
            Upload a file or
            <br />
            drag and drop here
            <br />
          </p>
          <p
            className="secondary"
          >
            ppt pptx
          </p>
        </div>
      </div>
      <input
        accept="application/vnd.openxmlformats-officedocument.presentationml.presentation,application/vnd.ms-powerpoint"
        multiple={false}
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.KindAttributes component when kind is spreadsheet renders correctly 1`] = `
<div
  className="form-input"
>
  <div
    className="form-input"
    style={Object {}}
  >
    <label
      className=""
    >
      Spreadsheet File
    </label>
    <div
      className="form-dropzone style-square"
      onClick={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
      style={Object {}}
    >
      <div
        className="contents-empty"
      >
        <i
          className="manicon manicon-cloud-up"
        />
        <div
          className="message"
        >
          <p
            className="primary"
          >
            Upload a file or
            <br />
            drag and drop here
            <br />
          </p>
          <p
            className="secondary"
          >
            xls xlsx
          </p>
        </div>
      </div>
      <input
        accept="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,application/vnd.ms-excel"
        multiple={false}
        onChange={[Function]}
        style={
          Object {
            "display": "none",
          }
        }
        type="file"
      />
    </div>
  </div>
</div>
`;

exports[`Backend.Resource.Form.KindAttributes component when kind is video renders correctly 1`] = `
<div
  className="form-section"
>
  <div
    className="form-input"
  >
    <label>
      Is this an externally linked video?
    </label>
    <div
      className="toggle-indicator"
    >
      <div
        className="boolean-primary"
        onClick={[Function]}
      />
    </div>
  </div>
  <div
    className="form-section"
  >
    <div
      className="form-input"
      style={Object {}}
    >
      <label
        className=""
      >
        Video ID
      </label>
      <input
        onChange={[Function]}
        placeholder="Video ID"
        type="text"
        value=""
      />
    </div>
    <div
      className="form-input"
    >
      <div
        className="form-input"
        style={Object {}}
      >
        <label>
          External Video Type
        </label>
        <div
          className="form-select"
        >
          <i
            className="manicon manicon-caret-down"
          />
          <select
            onChange={[Function]}
            value={undefined}
          >
            <option
              value=""
            >
              Select a video source...
            </option>
            <option
              value="youtube"
            >
              Youtube
            </option>
            <option
              value="vimeo"
            >
              Vimeo
            </option>
          </select>
        </div>
      </div>
    </div>
  </div>
</div>
`;
